--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "webframeworks-ng-express",
+  "name": "fastcampus-capstone",
   "version": "1.0.0",
-  "description": "WebFrameworks AngularJS 1.x + Express Quickstart",
+  "description": "fastcampus capstone project",
   "main": "index.js",
   "scripts": {
     "start": "node ./bin/www",
