--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./bin/www",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --recursive **/*spec.js"
   },
   "author": "Jeado Ko",
   "license": "MIT",
@@ -17,9 +17,12 @@
     "ejs": "^2.4.2",
     "express": "^4.16.2",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0"
+    "pg": "^6.0.1",
+    "sequelize": "^3.23.4",
+    "serve-favicon": "~2.3.0",
+    "sqlite3": "^3.1.4"
   },
   "devDependencies": {
-    "gulp": "^3.9.1"
+    "supertest": "^1.2.0"
   }
 }
